# celery-injectable

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/celery_injectable/: __init__.py  inject.py
src/injectable/: __init__.py  dependencies.py  inject.py
tests/: def test_dependencies.py  test_inject.py
